rename folder structure

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2>Block 1</h2>
     <ul>
       <li>
-        <a href="ds/ch2/first_event.html">Week 1 notes/exercises</a> - Not very
-        many notes on this one...focused mostly on exercises
+        <a href="week1/events/first_event.html">Week 1 notes/exercises</a> - Not
+        very many notes on this one...focused mostly on exercises
         <h3>Questions:</h3>
         <ol>
           <li>
@@ -23,8 +23,8 @@
         </ol>
       </li>
       <li>
-        <a href="ntn/ch5-objects/index.html">Week 2 notes/exercises</a>- Notes
-        and exercises for this week.
+        <a href="week2/objects/index.html">Week 2 notes/exercises</a>- Notes and
+        exercises for this week.
       </li>
       <li><a href="challenge1/index.html">Challenge 1: Todo</a></li>
     </ul>
