--- a/week2/index.html
+++ b/week2/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 330 portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Block 1</h2>
-    <ol>
-      <li><a href="week1/">Week01</a></li>
-      <li><a href="week2/">Week02</a></li>
-      <li><a href="challenge1/index.html">Challenge 1: Todo</a></li>
-    </ol>
-    
-      
+    <h2>Week02</h2>
+    <ul>
+      <li>
+        <a href="objects/index.html">Objects notes</a>- Notes and exercises for
+        this week.
+      </li>
+      <li><a href="quiz/">Quiz ninja start</a></li>
     </ul>
   </body>
 </html>
