feat: main menu added at the index file

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
   <body>
     <h1>WDD 330 portfolio</h1>
     <h2>Block 1</h2>
-    <ol>
-      <li><a href="week1/">Week01</a></li>
-      <li><a href="week2/">Week02</a></li>
-      <li><a href="challenge1/index.html">Challenge 1: Todo</a></li>
+    <ol id="menu">
     </ol>
     
       
     </ul>
+    <script src="./main.js"></script>
   </body>
 </html>
