fix: update main menu

--- a/week4/index.html
+++ b/week4/index.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Week03</h2>
+    <h2>Week04</h2>
     <ul>
       <li>
         <a href="./notes.md">Individual notes</a>
+      </li>
+      <li>
+        <a href="./exercises.js">Exercises</a>
       </li>
       <li>
         <a href="teamactivity/index.html">Team Activity</a>
