W05: fix relative path teamactivity

--- a/week5/index.html
+++ b/week5/index.html
@@ -17,7 +17,7 @@
         <a href="./exercises.js">Exercises</a>
       </li>
       <li>
-        <a href="teamactivity/index.html">Team Activity</a>
+        <a href="./teamactivity/index.html">Team Activity</a>
       </li>
     </ul>
   </body>
