W06: Fix week 6 index page

--- a/week6/index.html
+++ b/week6/index.html
@@ -8,16 +8,10 @@
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Week05</h2>
+    <h2>Week06</h2>
     <ul>
       <li>
-        <a href="./notes.md">Individual notes</a>
-      </li>
-      <li>
-        <a href="./exercises.js">Exercises</a>
-      </li>
-      <li>
-        <a href="./teamactivity/index.html">Team Activity</a>
+        <a href="./TODO-APP/index.html">TODO App Project</a>
       </li>
     </ul>
   </body>
