--- a/week6/TODO-APP/index.html
+++ b/week6/TODO-APP/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo APP (Midterm Project)</title>
+    <title>TODOS APP (Midterm Project)</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>
-            ToDo APP (Midterm Project)
+            Midterm Project
         </h1>
     </header>
     <main>
@@ -22,15 +22,7 @@
             <div id="TODO__Container" class="TODO__Container">
                 <h2 class="TODO__Title">Todos</h2>
                 <div class="TODO__SubContainer">
-                    <ul id="TODO__List" class="TODO__List">
-                        <li class="List__Item">
-                            <label for="Item__Checkbox--1" class="Item__Label">
-                                <input type="checkbox" id="Item__Checkbox--1" class="Item__Checkbox">
-                                Task template
-                            </label>
-                            <button type="button" id="Item__Button--1" class="Button Button--danger">X</button>
-                        </li>
-                    </ul>
+                    <ul id="TODO__List" class="TODO__List"></ul>
                     <div id="TODO__Filters" class="TODO__Filters">
                         <span id="Filters__Count" class="Filters__Count"># tasks left</span>
                         <fieldset class="Filters" id="Filters">
@@ -58,13 +50,14 @@
                 </div>
             </div>
             <form id="TODO__Form" class="TODO__Form">
-                <input type="text" placeholder="New Task" class="Input" id="Input" autofocus>
+                <input type="text" placeholder="New Task" class="Input" id="Input" autofocus autocomplete="off">
                 <button type="submit" class="Button Button--primary">+</button>
             </form>
         </article>
     </main>
     <footer>
-        <a href="../index.html">Go back to Week 6</a>
+        Developed by <a href="https://github.com/wemf">@wemf</a> for BYUI WDD 330 course
     </footer>
+    <script src="./js/main.js" type="module"></script>
 </body>
 </html>
