W06: fix missing input form label

--- a/week6/TODO-APP/index.html
+++ b/week6/TODO-APP/index.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
             <form id="TODO__Form" class="TODO__Form">
+                <label for="Input" class="visuallyhidden">New Task</label>
                 <input type="text" placeholder="New Task" class="Input" id="Input" autofocus autocomplete="off">
                 <button type="submit" class="Button Button--primary">+</button>
             </form>
