W07: finish team activity

--- a/week7/teamactivity/index.html
+++ b/week7/teamactivity/index.html
@@ -25,7 +25,7 @@
         <!-- your hike list should be build here. -->
       </ul>
     </main>
-
-    <script src="main.js" type="module"></script>
+    <section id="commentsSection"></section>
+    <script src="./app/main.js" type="module"></script>
   </body>
 </html>
