W07: js for fetch api and render table

--- a/week8/teamactivity/index.html
+++ b/week8/teamactivity/index.html
@@ -12,7 +12,7 @@
         </header>
         <main>
             <section>
-                <table>
+                <table id="shipTable">
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -22,14 +22,15 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>CR90 corvette</td>
-                            <td>150</td>
-                            <td>30-165</td>
+                            <td>...</td>
+                            <td>...</td>
+                            <td>...</td>
                         </tr>
                     </tbody>
                 </table>
-                <button id="prev">Prev</button> <button id="next">Next</button>
+                <button id="previous">Previous</button> <button id="next">Next</button>
             </section>
         </main>
+        <script src="./app.js"></script>
     </body>
 </html>
