--- a/project/index.html
+++ b/project/index.html
@@ -33,7 +33,7 @@
     </main>
     <footer>
         <div class="footer-container">
-            <p>BYU Idaho - Course Project</p>
+            <p>BYU Idaho - WDD 330 Course Project</p>
         </div>
     </footer>
     <script src="./js/main.js" defer type="module"></script>
