Project: render saved jobs and delete them

--- a/project/index.html
+++ b/project/index.html
@@ -15,6 +15,16 @@
     <header>
         <div class="header-container">
             <h1>Job Finder Manager</h1>
+            <nav style="margin-top: 1rem;">
+                <ul class="app-nav">
+                    <li>
+                        <a href="./index.html" class="app-nav--current">Search Jobs</a>
+                    </li>
+                    <li>
+                        <a href="./saved-jobs.html">Saved Jobs</a>
+                    </li>
+                </ul>
+            </nav>
             <form class="search-form" role="search" action="/" method="get">
                 <label for="search">
                     <span class="visually-hidden">Search a job</span>
